[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["LouisStefanuto <louis.stefanuto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
ruff = "^0.8.1"
mypy = "^1.13.0"
bandit = "^1.8.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]  # lint and format jupyer notebooks

[tool.ruff.lint]
extend-select = ["I"]  # sort imports like isort https://github.com/astral-sh/ruff/issues/8926

[tool.pytest.ini_options]
addopts = "--cov=aoc2024"
